--- a/fu.zhen/lib/css/styleguide.css
+++ b/fu.zhen/lib/css/styleguide.css
@@ -75,6 +75,7 @@ a:hover {
 .flex-align-center {align-items: center;}
 .flex-justify-center {justify-content: center;}
 
+.flex-column { flex-direction:column; }
 
 
 
@@ -225,6 +226,12 @@ a:hover {
 		padding: 0;
 	}
 
+	.card-section~.card-section {
+		border-top: 1px solid var(--color-neutral-light);
+	}
+	.card-section {
+		padding: 1em;
+	}
 
 
 
