--- a/zheng.yushi/lib/css/styleguide.css
+++ b/zheng.yushi/lib/css/styleguide.css
@@ -75,6 +75,7 @@ a:hover {
 .flex-align-center {align-items: center;}
 .flex-justify-center {justify-content: center;}
 
+.flec-column {flex-direction: column;}
 
 
 /*Small Classes*/
@@ -225,7 +226,12 @@ a:hover {
 	}
 
 
-
+	.card-section~.card-section {
+		border-top: 1px solid var(--color-neutral-light);
+	}
+	.card-section {
+		padding: 1em;
+	}
 
 	/* VIEWWINDOW */
 
