--- a/tu.hsuanling/css/storetheme.css
+++ b/tu.hsuanling/css/storetheme.css
@@ -73,6 +73,8 @@ p {
 	border-radius: 0.5em;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
+	height:100%;
+	transition: all 0.3s;
 }
 
 .product-overlay {
@@ -169,10 +171,31 @@ p {
 	font-size: 0.8rem;
 }
 
+.product.figure img{
+	height: 100%;
+	object-fit: cover;
+}
 
+.productlist a {
+	text-decoration: none;
+	font-weight: initial;
+}
 
+.product.figure:hover {
+	box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+}
 
+.images-main img{
+	width: 100%;
+	height: 40vh;
+	object-fit: cover;
+}
 
+.images-thumbs {
+	padding-top: 1em;
+	width:2em;
+	object-fit: contain;
+}
 
 
 
