--- a/tu.hsuanling/lib/css/styleguide.css
+++ b/tu.hsuanling/lib/css/styleguide.css
@@ -69,6 +69,8 @@ a:hover {
 .flex-align-center {align-items: center;}
 .flex-justify-center {justify-content: center;}
 
+.flex-column{ flex-direction:column; }
+
 
 
 /* COMPONENT CLASSES */
@@ -222,9 +224,16 @@ a:hover {
 		padding: 0;
 	}
 
+	.card-section~.card-section {
+		border-top: 1px solid var(--color-main-light);
+	}
+
+	.card-section {
+		padding: 1em;
+	}
 
 .view-window{
-	height: 50vh;
+	height: 30vh;
 	position: relative;
 	overflow: hidden;
 	background-size: cover;
