--- a/chiang.eileen/css/storetheme.css
+++ b/chiang.eileen/css/storetheme.css
@@ -17,6 +17,13 @@ body {
 }
 
 
+.favrotie input:checked + label {
+	color:red;
+
+}
+
+
+
 
 @media (max-width: 800px) {
 	.container {
@@ -38,10 +45,28 @@ body {
 
 
 
+
+
 .figure.product {
 	border-radius: 0.5em;
 	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 	overflow: hidden;
+	height: 100%;
+	transition:all 0.3s;
+}
+
+.product.figure img {
+	height: 100%;
+	object-fit: contain;
+}
+
+.productlist a {
+	text-decoration: none;
+	font-weight: initial;
+}
+
+.product.figure:hover {
+	box-shadow: 0 2px 15px rgba(0,0,0,0.2); 
 }
 
 .product-overlay {
@@ -97,4 +122,20 @@ body {
 		transform: none;
 		padding: 0;
 	}
+}
+
+
+
+
+
+
+.images-main img{
+	width:100%;
+	height:40%;
+	object-fit: contain;
+}
+.images-thumbs img {
+	width:8em;
+	height: 6em;
+	object-fit: contain;
 }
