--- a/chiang.eileen/lib/css/styleguide.css
+++ b/chiang.eileen/lib/css/styleguide.css
@@ -79,6 +79,8 @@ a:hover {
 .flex-align-center {align-items: center;}
 .flex-justify-center {justify-content: center;}
 
+.flex-column { flex-direction:column; }
+
 
 
 
@@ -89,7 +91,7 @@ a:hover {
 	max-width: 100%;
 	vertical-align: text-bottom;
 }
-
+.hidden { display: none; }
 
 
 
@@ -227,6 +229,13 @@ a:hover {
 
 	.card.flat {
 		padding: 0;
+	}
+
+	.card-section~.card-section {
+		border-top: 1px solid var(--color-neutral-light);
+	}
+	.card-section {
+		padding: 1em;
 	}
 
 
