--- a/chen.lu/lib/css/styleguide.css
+++ b/chen.lu/lib/css/styleguide.css
@@ -1,4 +1,3 @@
-
 /* css reset */
 
 *, *::after, *::before {
@@ -75,6 +74,8 @@ a:hover {
 
 .flex-align-center { align-items:center; }
 .flex-justify-center { justify-content: center; }
+
+.flex-column{flex-direction: column;}
 
 
 /* small classes */
@@ -235,6 +236,14 @@ a:hover {
 	.card.flat{
 		padding: 0;
 	}
+
+
+	.card-section.card-section{
+       border-top: 1px solid var(--color-neutral-light);
+    }
+   .card-section{
+       padding:1em;
+    }
 
 
 .view-window{
@@ -411,5 +420,3 @@ table td{
 .toggle input:checked + label::after {
    transform: translatex(1em);
 }
-
-
