--- a/chen.lu/css/storetheme.css
+++ b/chen.lu/css/storetheme.css
@@ -1,4 +1,3 @@
-
 :root {
 	--color-offwhite: #f4f4f4;
 
@@ -53,6 +52,21 @@ body {
 	border-radius: 0.5em;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
+	height: 100%;
+	transition: all 0.3s;
+}
+
+.product.figure.img {
+    height: 100%;
+    object-fit: contain;
+}
+
+.productlist a {
+	text-decoration: none;
+	font-weight: initial;
+}
+.product.figure:hover {
+	box-shadow: 0 2px 15px rgba(0,0,0,0.2);
 }
 
 .product-overlay {
@@ -114,3 +128,29 @@ body {
 		transform: none;
 	}
 }
+
+.images-main img{
+	width: 100%;
+	height: 40vh;
+	object-fit: contain;
+}
+.images-thumbs img{
+	width: 8em;
+	height: 6em;
+	object-fit: contain;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
