--- a/zheng.yushi/lib/css/styleguide.css
+++ b/zheng.yushi/lib/css/styleguide.css
@@ -345,6 +345,9 @@ a:hover {
     cursor: pointer;
     text-align: center;
 }
+.form-button.inline {
+	width: initial;
+}
 .form-button:hover {
 	text-decoration: none;
 }
