--- a/fu.zhen/css/storetheme.css
+++ b/fu.zhen/css/storetheme.css
@@ -143,3 +143,14 @@ body {
 	height: 6em;
 	object-fit: contain;
 }
+
+
+
+
+
+span.badge:not(:empty)::after {
+	content: ')';
+}
+span.badge:not(:empty)::before {
+	content: '(';
+}
