--- a/fu.zhen/lib/css/styleguide.css
+++ b/fu.zhen/lib/css/styleguide.css
@@ -326,6 +326,9 @@ a:hover {
 	cursor: pointer;
 	text-align: center;
 }
+.form-button.inline {
+	width: initial;
+}
 .form-button:active: hover{
 	text-decoration: none;
 }
