--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -40,7 +40,7 @@
     --color-box-shadow: #cccecc99;
 
 
-    --color-overlay:  #003A6DCC;
+    --color-overlay:  #003A6D44;
     --color-box-shadow:  #818c7fCC;
 }
 
@@ -113,13 +113,16 @@ fieldset {
 }
 
 #burger img {
-    background-size: contain;
+	
+	background-image: url(../../img/MedicineBottle.png);
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #logo img {
-    background-size: contain;
+    background-size: cover;
+    background-image: url(../../img/MedicineBottle.png);
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -134,20 +137,26 @@ main {
 	flex-direction: row;
 }
 
-#hero, #feature, #mission, #footer {
+#feature, #mission, #footer {
 	width: 65vw;
 	height: auto;
 }
 
 #hero {
+	width: 100%;
 	height: 45vh;
-	background-position: center;
-	background-image: url(../img/MedicineBottle.png);
-	background-size: cover;
+	overflow: hidden;
+	position: relative;
 }
 
-
-
+#hero img {
+	width: 100%;
+}
+#hero_button {
+	position: absolute;
+	right: 500px;
+	top: 50%;
+}
 
 
 /* FEATURE PRODUCTS */
@@ -208,6 +217,7 @@ ul, ol, li {
     line-height: var(--header-height);
     border-top: 2px solid var(--color-primary-dark);
     margin: 0;
+    margin-top: 4vh;
     padding: 0;
 }
 
@@ -248,18 +258,43 @@ margin-top: 5px;
 	height: 50px;
 	border: 1px solid var(--color-primary-dark);
 }
-
+#footer .form-label-animated {
+    font-size: 1.2em;
+    color: var(--color-primary-dark);
+    display: block;
+    width: 100%;
+    position: relative;
+    top: -2em;
+    transition: all 0.3s ease-in-out;
+    cursor: text;
+}
+#footer .form-label-motion {
+    font-size: 0.8em;
+    top: -6em;
+}
 #twitter {
-	/*background-image: url(../img/logo.png);*/
+	background-image: url(../../img/MedicineBottle.png);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;	
 }
 #instagram {
-	/*background-image: url(../img/Family.png);*/
+	background-image: url(../../img/MedicineBottle.png);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;	
 }
 #facebook {
-	/*background-image: url(../img/Family.png);*/
+	background-image: url(../../img/MedicineBottle.png);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;	
 }
 #footerLogo {
-	/*background-image: url(../img/Family.png);*/
+	background-image: url(../../img/MedicineBottle.png);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;	
 }
 
 @media screen only and (min-width: 550px){
@@ -318,7 +353,6 @@ margin-top: 5px;
 		padding-left: 0.5em;
 	}
 }
-
 
 /* NavBar */
 #test .nav-matrial a {
@@ -401,7 +435,7 @@ margin-top: 5px;
 }
 .form-label-motion {
     font-size: 0.8em;
-    top: -1.7em;
+    top: -4em;
 }
 input[type="text"]
 {
@@ -409,16 +443,91 @@ input[type="text"]
     padding: 0;
 }
 
-
-
 .images-main {
-	width: 40vh;
-	height: 40vh;
-	object-fit: cover;
-}
-.images-thumbs {
-	width: 8em%;
-	height: 6em;
+	width: 42vh;
+	height: 44vh;
 	object-fit: contain;
 }
+.images-main img {
+	width: 100%;
+}
+.images-thumbs img {
+	width: 8em;
+	height: 8em;
+	object-fit: contain;
+}
+.images-thumbs img:not(img:last-child){
+	margin-right:1em;
+} 
 
+.checked {
+  color: orange;
+}
+
+.product-price span,
+.product-sku span,
+.product-size span{
+	font-weight: bold;
+}
+h3.product-name{
+	margin: 0;
+}
+h4.product-benefits,
+h4.product-description{
+	margin-bottom: 0;
+}
+.product-amount span {
+	margin-right:1em ;
+}
+
+form > h4 {
+	margin-bottom: 0.3em;
+}
+.form-select > select{
+	background-color: #fff;
+	border: 1px solid var(--color-primary-dark);
+	transition: all 0.3 ease-in-out;
+}
+.form-select > select:hover{
+	background-color: var(--color-primary-dark);
+	color: #fff;
+
+}
+.product_item_footer,
+.cart_footer,
+.confirm_footer,
+.to_cart_footer {
+	position: absolute;
+	bottom: 0;
+}
+@media (max-width: 600px){
+   
+	.product_item_footer,
+	.cart_footer,
+	.confirm_footer,
+	.to_cart_footer {
+	position: relative;
+}
+
+}
+.cart_body{
+	width: 100vw;
+	height: 100vh;
+}
+.card-section,
+.card-product-section{
+	padding: 1em;
+}
+.card-section~.card-section{
+	border-top: 1px solid var(--color-neutral-light);
+}
+
+#checkout_btn{
+	padding: 0 1em;
+}
+span.badge:not(:empty)::before{
+	content: "(";
+}
+span.badge:not(:empty)::after{
+	content: ")";
+}
