--- a/Kardan_Kosar/lib/css/storetheme.css
+++ b/Kardan_Kosar/lib/css/storetheme.css
@@ -279,7 +279,7 @@ margin-top: 5px;
 	background-repeat: no-repeat;	
 }
 #instagram {
-	background-image: url(../../img/MedicineBottle.png);
+	background-image: url(../../img/Burger.png);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;	
@@ -524,4 +524,10 @@ form > h4 {
 
 #checkout_btn{
 	padding: 0 1em;
+}
+span.badge:not(:empty)::before{
+	content: "(";
+}
+span.badge:not(:empty)::after{
+	content: ")";
 }
