--- a/chiang.eileen/lib/css/styleguide.css
+++ b/chiang.eileen/lib/css/styleguide.css
@@ -347,6 +347,10 @@ a:hover {
     cursor: pointer;
     text-align: center;
 }
+
+.form-button.inline {
+	width: initial;
+}
 .form-button:hover{
    text-decoration: none;
 }
