--- a/chiang.eileen/css/storetheme.css
+++ b/chiang.eileen/css/storetheme.css
@@ -126,9 +126,6 @@ body {
 
 
 
-
-
-
 .images-main img{
 	width:100%;
 	height:40%;
@@ -138,4 +135,12 @@ body {
 	width:8em;
 	height: 6em;
 	object-fit: contain;
+}
+
+
+span.badge:not(:empty)::after {
+    content: ')';
+}
+span.badge:not(:empty)::before {
+    content: '(';
 }
