--- a/tu.hsuanling/css/storetheme.css
+++ b/tu.hsuanling/css/storetheme.css
@@ -200,11 +200,11 @@ p {
 }
 
 
-span.badge::after {
+span.badge:not(:empty)::after {
 	content: ')';
 }
 
-span.badge::before {
+span.badge:not(:empty)::before {
 	content: '(';
 }
 
