--- a/tu.hsuanling/lib/css/styleguide.css
+++ b/tu.hsuanling/lib/css/styleguide.css
@@ -337,6 +337,10 @@ a:hover {
 	text-align: center;
 }
 
+.form-button.inline {
+	width: initial;
+}
+
 .form-button:hover {
 	text-decoration: none;
 } 
