--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -72,7 +72,7 @@ a: hover {
 	text-decoration: none;
 }
 
-.bgImage {
+.bgImage, #twitter, #instagram, #facebook, #footerLogo {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -105,36 +105,39 @@ fieldset {
  {
 	width: 50px;
 	height: 50px;
-	border: 1px solid var(--color-primary-dark);
 }
 
 #burger {
 	margin-right: 10px;
 }
 
-#burger img {
-	
-	background-image: url(../../img/MedicineBottle.png);
+#burger a {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border: none;
 }
 
 #logo img {
     background-size: cover;
-    background-image: url(../../img/MedicineBottle.png);
     background-position: center;
     background-repeat: no-repeat;
 }
-
-
-
-
 
 /* HERO IMAGE */
 main {
 	width: 100vw;
 	flex-direction: row;
+	min-height: 70%;
+    min-height: -webkit-calc(100% - 280px);
+    min-height: -moz-calc(100% - 280px);
+    min-height: calc(100% - 280px);
+
+/*	min-height: 70%;
+    min-height: -webkit-calc(100% - 187px);
+    min-height: -moz-calc(100% - 187px);
+    min-height: calc(100% - 187px);*/
+
 }
 
 #feature, #mission, #footer {
@@ -143,21 +146,28 @@ main {
 }
 
 #hero {
-	width: 100%;
-	height: 45vh;
+	width: 65vw;
+	height: 50vh;
 	overflow: hidden;
 	position: relative;
 }
-
 #hero img {
 	width: 100%;
 }
-#hero_button {
-	position: absolute;
-	right: 500px;
-	top: 50%;
-}
 
+@media screen and (max-width: 550px){
+	#hero {
+		width: 100vw;
+		height: 50vh;
+		overflow: hidden;
+		position: relative;
+	}
+	#hero img {
+		width: 300%;
+		position: absolute;
+		left: -58%;
+	}
+}
 
 /* FEATURE PRODUCTS */
 
@@ -217,7 +227,7 @@ ul, ol, li {
     line-height: var(--header-height);
     border-top: 2px solid var(--color-primary-dark);
     margin: 0;
-    margin-top: 4vh;
+    margin-top: 2em;
     padding: 0;
 }
 
@@ -227,8 +237,10 @@ ul, ol, li {
 	height: 90px;
 }
 #footer > ul:first-child {
-margin-top: 5px;
+	margin-top: 5px;
 	border-bottom: 1px solid var(--color-primary-dark);
+	justify-content: flex-start;
+	align-items: center;
 }
 #footer > ul > li:first-child {
 	width: 20vw;
@@ -238,12 +250,16 @@ margin-top: 5px;
 #footer > ul > li:nth-child(2) {
 	width: 50vw;
 	height: 100%;
+	justify-content: center;
+	align-items: center;
 }
 
 #footer > ul > li > form, 
 #footer > ul > li > form > ul {
 	width: 100%;
 	height: 100%;
+	justify-content: flex-end;
+	align-items: center;
 }
 
 #footer > ul > li > form > ul > li:first-child {
@@ -252,11 +268,27 @@ margin-top: 5px;
 #footer > ul > li > form > ul > li:nth-child(2) {
 	width: 20%;
 }
+#footer > ul > li > form > ul > li:nth-child(2) form{
+	justify-content: flex-end ;
+	align-items: center;
+}
+#footer > ul > li > form > ul > li:nth-child(2) ul{
+	justify-content: flex-end ;
+	align-items: baseline;
+}
+
+#footer > ul:nth-child(2) >li:nth-child(1){
+	justify-content: flex-start;
+	align-items: center;
+}
+#footer > ul:nth-child(2) >li:nth-child(2){
+	justify-content: flex-end;
+	align-items: center;
+}
 
 #footerLogo {
 	width: 150px;
 	height: 50px;
-	border: 1px solid var(--color-primary-dark);
 }
 #footer .form-label-animated {
     font-size: 1.2em;
@@ -272,32 +304,56 @@ margin-top: 5px;
     font-size: 0.8em;
     top: -6em;
 }
-#twitter {
-	background-image: url(../../img/MedicineBottle.png);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;	
+
+@media screen and (max-width: 550px){
+	/*TOP SECTION OF FOOTER*/
+	#footer > ul {
+		width: 100%;
+		height: auto;
+	}
+	#footer > ul:first-child {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	#footer > ul:first-child > li,
+	#footer > ul:first-child > li > ul {
+		width: 100%;
+		justify-content: center;
+		gap: 20px;
+	}
+	#footer > ul:first-child > li:nth-child(2),
+	#footer > ul:first-child > li:nth-child(2)> ul{
+		width: 90%;
+		justify-content: center;
+	}
+	#footer > ul > li > form > ul{
+	justify-content: center ;
+	align-items: baseline;
+	margin: 0;
+	height: auto;
 }
-#instagram {
-	background-image: url(../../img/Burger.png);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;	
-}
-#facebook {
-	background-image: url(../../img/MedicineBottle.png);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;	
-}
-#footerLogo {
-	background-image: url(../../img/MedicineBottle.png);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;	
+	/*BOTTOM SECTION OF FOOTER*/
+		#footer > ul:nth-child(2) {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	#footer > ul:nth-child(2) > li {
+		width: 100%;
+		justify-content: center;
+		align-items: center;
+	}
+
+	#footer > ul:nth-child(2) >li:nth-child(1){
+		justify-content: center;
+		align-items: center;
+		margin-top: 1em;
+	}
+	
 }
 
-@media screen only and (min-width: 550px){
+@media screen and (min-width: 550px){
 	flex-wrap: wrap;
 }
 
@@ -422,20 +478,70 @@ margin-top: 5px;
  	transform: translateY(0);   
 }
 
+@media (max-width: 600px){
+   #bottom .product-overlay figcaption {
+    box-sizing: border-box;
+    padding: 0;
+	}
+
+   #bottom .product-overlay figcaption div:nth-child(2) {
+   	padding: 0 16px;
+   }
+      #bottom .product-overlay figcaption div:first-child {
+   	padding: 4px 16px;
+   }
+	#bottom .product-overlay .caption-body{
+	    background-color: white;
+	    border-radius: 0;
+	    transform: translateY(0);  
+	    transition: all 0.3s ease-in-out;
+	    position: absolute;
+	    bottom: 0;
+	    width: 100%;
+	}
+
+
+	#bottom  .product-overlay:hover .caption-body{
+	 	 
+	}
+}
+
 /* Form Label */
 .form-label-animated {
     font-size: 1.2em;
     color: var(--color-primary-dark);
     display: block;
     width: 100%;
-    position: relative;
-    top: -2em;
+    position: absolute;
+    top: -0.1em;
     transition: all 0.3s ease-in-out;
     cursor: text;
 }
 .form-label-motion {
     font-size: 0.8em;
-    top: -4em;
+    top: -1.5em;
+}
+#product-search .form-control,
+#checkout-form .form-control{
+	position: relative;
+}
+#checkout-form .form-control,
+#checkout-form .form-button{
+	padding: 0.3em 0;
+}
+#checkout-form h3 {
+	margin-bottom: 1.5em;
+}
+#checkout-form h3:not(h3:first-child),
+#checkout-form .form-button
+{
+	margin-top: 3em;
+}
+#filterProducts{
+	margin-top: 1.5em;	
+}
+#productListTitle, #filterProducts{
+	margin-bottom: 2em;
 }
 input[type="text"]
 {
@@ -493,13 +599,6 @@ form > h4 {
 	color: #fff;
 
 }
-.product_item_footer,
-.cart_footer,
-.confirm_footer,
-.to_cart_footer {
-	position: absolute;
-	bottom: 0;
-}
 @media (max-width: 600px){
    
 	.product_item_footer,
@@ -536,10 +635,58 @@ span.badge:not(:empty){
 	box-sizing: border-box;
 	font-size: 0.8em;
 }
-
+#mission {
+	padding: 2em 1em;
+}
+#mission li {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: justify; text-align-last: center;
+	font-size: 0.8em;
+	padding: 0 2em;
+}
 /*span.badge:not(:empty)::before{
 	content: "(";
 }
 span.badge:not(:empty)::after{
 	content: ")";
 }*/
+#filterProducts .form-button {
+	padding:  0.5em 1em;
+}
+#sort{
+	margin:0 ;
+	align-self: center;
+}
+
+
+
+/* Product Item */
+#productBenefits {
+	width : 100%;
+	height:  auto;
+}
+
+#productBenefits > div:first-child {
+	height: 350px;
+	padding: 2em;
+	background-color: var(--color-primary-dark);
+	color: var(--color-white);
+}
+#productBenefits > div  > h4 {
+	margin: 0;
+	color: var(--color-white);
+	padding-bottom: 1.3em;
+}
+#productBenefits > figure {
+	width: 100%;
+	height: 350px;
+	margin: 0;
+	overflow: hidden;
+}
+
+#productBenefits > figure > img {
+	width : 100%;
+	height: auto;
+}
