--- a/tu.hsuanling/css/storetheme.css
+++ b/tu.hsuanling/css/storetheme.css
@@ -11,12 +11,13 @@
 	--color-sub-dark: #344028;
 
 	--font-sans: 'Poppins', sans-serif;
+
+	--footer-height:  1.5rem;
 }
 
 
 body{
 	background-color: var(--color-main-light);
-	padding-bottom: 4em;
 }
 
 h1,
@@ -211,4 +212,50 @@ span.badge:not(:empty)::before {
 .succulent-filter button {
 	font-size: 0.8em;
 	font-weight: 300;
+}
+
+
+footer {
+	margin-top: 5em;
+	padding-top: 1em;
+	padding-bottom: 2em;
+
+	position: relative;
+	bottom: 0;
+
+	width: 100%;
+	background-color: var(--color-main-dark);
+	line-height: var(--footer-height);
+
+}
+
+footer h3,h4,p,ul {
+	color: white;
+}
+
+footer ul {
+	list-style-type: none;
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-left: 0;
+}
+
+footer p {
+	font-size: 0.8em;
+	font-weight: 300;
+}
+
+footer li {
+	font-size: 0.8em;
+	font-weight: 700;
+}
+
+.copyright {
+	width: 100%;
+	padding-top: 3em;
+
+	font-size: 0.7em;
+	font-weight: 300;
+	color: white;
+	text-align: center;
 }
