--- a/zheng.yushi/css/storetheme.css
+++ b/zheng.yushi/css/storetheme.css
@@ -68,7 +68,7 @@ body {
 }
 
 .product.figure:hover {
-	box-shadow: 0 2px 15px rgba(0,0,0,0.2);;
+	box-shadow: 0 2px 15px rgba(0,0,0,0.2);
 }
 
 .figure-overlay {
