--- a/chang.karen/midterm/midtermstyleguide.css
+++ b/chang.karen/midterm/midtermstyleguide.css
@@ -25,10 +25,6 @@ body {
     margin: 0;
     font-size: 100%;
     font-family: futura-pt, sans-serif;
-/*    background-image: url("../../img/candies.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;*/
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -62,10 +58,7 @@ body {
 .card-section {
     height: 2.5rem;
 }
-/*.card-section-1 {
-    height: 3rem;
-}
-*/
+
 
 /* SMALL */
 
@@ -210,11 +203,11 @@ body {
     display: flex;
 }
 
-.nav-material li,
+/*.nav-material li,
 .nav-stretch li {
     flex: 1 1 auto;
     text-align: center;
-}
+}*/
 
 #top-nav li a {
     color: #fff;
@@ -233,59 +226,6 @@ body {
     list-style: none;
     text-decoration: none;
 }
-
-
-/*.nav-pills a {
-    border-radius: 2em;
-    padding: 0.5em 1em;
-}
-
-.nav-crumbs li:not(:first-child)::before {
-    content: '/';
-}
-
-.nav-crumbs a {
-    display: inline-block;
-}
-
-
-.nav-crumbs .active a,
-.nav-crumbs a:hover {
-    background-color: transparent;
-    color: inherit;
-    text-decoration: underline;
-}
-
-
-.nav-material a {
-    padding: 0.5em 1em;
-    position: relative;
-}
-
-.nav-material .active a {
-    background-color: transparent;
-    color: inherit;
-}
-
-.nav-material a:hover {
-    background-color: var(--color-neutral-light);
-    color: inherit;
-}
-
-.nav-material a::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    background-color: var(--color-main-medium);
-    transition: all 0.3s;
-}
-
-.nav-material .active a::after {
-    height: 4px;
-}*/
 
 .rectangle-1 {
     display: inline-block;
@@ -538,6 +478,7 @@ body {
 }
 
 .form-input {
+    border-radius: 0;
     padding: 0.5em 0.5em;
     color: var(--color-neutral-dark);
     border-bottom: 1px solid var(--color-neutral-medium);
@@ -802,9 +743,6 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
 }
 
 .article.card.soft {
@@ -816,6 +754,7 @@ body {
 
 #article h2 {
     padding: 0;
+    padding-left: 10px;
     font-size: 1rem;
     line-height: 0.4rem;
 }
@@ -841,9 +780,6 @@ body {
     padding-bottom: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
 }
 
 .about_bg {
@@ -909,9 +845,6 @@ body {
 
 #list_body {
     padding-bottom: 0;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
 }
 
 #list_container {
@@ -939,16 +872,6 @@ body {
     background-color: var(--color-main-light);
 }
 
-/*#list_back {
-    margin: 10px 30px;
-    font-family: josefin-slab, serif;
-    font-weight: 900;
-    background: none;
-    border: none;
-    color: var(--color-main-blue);
-    font-size: 1rem;
-}
-*/
 /* PRODUCT ITEM */
 
 #item_body {
@@ -1007,7 +930,7 @@ body {
 }
 
 #cart_container a {
-    margin: 20px 0 0 5px;
+    margin-top: 20px;
     background: none;
     border: none;
     color: #000;
@@ -1064,9 +987,6 @@ body {
 #cart_body {
     padding-bottom: 0;
     margin-bottom: 0;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     display: flex;
     flex-direction: column;
 }
@@ -1124,6 +1044,48 @@ body {
     text-decoration: underline;
 }
 
+#promo-label {
+    font-weight: 900;
+    margin-bottom: 10px;
+}
+
+#promo {
+    border-radius: 0.5em;
+    border: 1.5px solid var(--color-main-blue);
+    background-color: #fff;
+    color: #000;
+    width: 100%;
+    height: 35px;
+    margin-top: 0;
+    padding-top: 0;
+    padding-left: 10px;
+    font-family: josefin-slab, serif;
+}
+
+#promo:focus{
+    outline: none;
+}
+
+#applyPromo {
+    margin-top: 5px;
+    background-color: var(--color-main-blue);
+    color: #fff;
+    font-weight: 900;
+    border-radius: 0.5em;
+}
+
+.code {
+    color: var(--color-main-blue);
+    font-weight: 900;
+}
+
+#codeApplied{
+    display: none;
+}
+
+.applied {
+    color: var(--color-main-blue);
+}
 
 #checkout {
     font-family: josefin-slab, serif;
@@ -1258,21 +1220,17 @@ body {
     color: var(--color-neutral-medium);
 }
 
-.container.recommeneded{
-    max-width: 200px;
-    background-color: rgba(255, 255, 255, 1);
-    padding: 0 30px;
-    border-radius: 10px;
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
+.container.recommeneded {
+    max-width: 800px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .recommeneded-h2 {
     font-size: 1em;
     font-family: josefin-slab, serif;
     margin-bottom: 5px;
-    color: var(--color-main-blue);
+    color: var(--color-main-dark);
 }
 
 .recommeneded_container {
@@ -1282,6 +1240,28 @@ body {
     text-align: left;
     font-family: josefin-slab, serif;
     font-size: 0.8em;
+}
+
+#welcome {
+    margin-top: 90px;
+    margin-bottom: 40px;
+}
+
+#otherRecommendations {
+    font-family: josefin-slab, serif;
+    font-size: 1.5em;
+    font-weight: 900;
+}
+
+.menu-button{
+    margin-left: auto;
+    margin-top: 5px;
+    font-size: 1.8em;
+    margin-bottom: 0;
+}
+
+.menu-button label {
+    display: none;
 }
 
 /* MEDIA QUERY */
@@ -1297,21 +1277,16 @@ body {
         padding-bottom: 10px;
     }
     .container.recommeneded{
-        max-width: 600px;
-        background-color: rgba(255, 255, 255, 1);
-        padding: 5px 10px;
         border-radius: 10px;
-        position: absolute;
-        bottom: 10px;
-        left: 30px;
-        margin-right: 5px;
+        margin-left: auto;
+        margin-right: auto;
     }
     #recommeneded-h2 {
     margin-top: 5px;
-    font-size: 1em;
+    font-size: 0.8em;
     font-family: josefin-slab, serif;
     margin-bottom: 5px;
-    color: var(--color-main-blue);
+    color: var(--color-main-dark);
     }
 }
 
@@ -1329,7 +1304,8 @@ body {
     }
     #welcome {
         font-size: 4.2rem;
-        margin-top: 80px;
+        margin-top: 50px;
+        margin-bottom: 40px;
     }
     #thankyou {
         font-size: 4.2rem;
@@ -1341,32 +1317,67 @@ body {
         line-height: 0.9rem;
     }
     .container.recommeneded{
-        max-width: 500px;
-        background-color: rgba(255, 255, 255, 1);
-        padding: 5px 10px;
         border-radius: 10px;
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
+        margin-left: auto;
+        margin-right: auto;
     }
     #recommeneded-h2 {
     margin-top: 5px;
-    font-size: 1em;
+    font-size: 0.8em;
     font-family: josefin-slab, serif;
     margin-bottom: 5px;
-    color: var(--color-main-blue);
+    color: var(--color-main-dark);
     margin-right: 5px;
     }
 }
 
 @media (max-width: 550px) {
+    .navbar .display-flex {
+        flex-wrap: wrap;
+    }
+    .navbar .nav {
+        width: 100%;
+        display: none;
+    }
+    .navbar .nav-flex ul {
+        display: block;
+    }
+
+    .navbar .nav li {
+        line-height: 2em;
+    }
+
+    .menu-button label {
+        display: block;
+        padding: 0 1em;
+    }
+
+    #menu:checked+.navbar .nav {
+        display: block;
+    }
+
+    #top-nav{
+        display: block;
+        padding-bottom: 15px;
+    }
+
+    .navbar img {
+        width: 45px;
+        height: 45px;
+        margin-bottom: 0;
+        padding: 0;
+        margin-top: 5px;
+    }
+
+
     #figure_container {
         display: flex;
         flex-direction: column;
     }
     #welcome {
         font-size: 3.8rem;
-        margin-top: 80px;
+        margin-top: 50px;
+        margin-bottom: 40px;
     }
      #thankyou {
         font-size: 3.5rem;
@@ -1393,20 +1404,16 @@ body {
         width: 97.5%;
     }
     .container.recommeneded{
-        max-width: 400px;
-        background-color: rgba(255, 255, 255, 1);
-        padding: 5px 10px;
         border-radius: 10px;
-        position: absolute;
-        bottom: 10px;
-        left: 5px;
+        margin-left: auto;
+        margin-right: auto;
     }
     #recommeneded-h2 {
     margin-top: 5px;
-    font-size: 1em;
+    font-size: 0.8em;
     font-family: josefin-slab, serif;
     margin-bottom: 5px;
-    color: var(--color-main-blue);
+    color: var(--color-main-dark);
     margin-right: 5px;
     }
 }
@@ -1418,7 +1425,8 @@ body {
     }
     #welcome {
         font-size: 3.5rem;
-        margin-top: 80px;
+        margin-top: 50px;
+        margin-bottom: 40px;
     }
     #thankyou {
         font-size: 3rem;
@@ -1441,20 +1449,16 @@ body {
         width: 97%;
     }
     .container.recommeneded{
-        max-width: 200px;
-        background-color: rgba(255, 255, 255, 1);
-        padding: 5px 10px;
         border-radius: 10px;
-        position: absolute;
-        left: 5px;
-        bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
     }
     #recommeneded-h2 {
     margin-top: 5px;
-    font-size: 1em;
+    font-size: 0.8em;
     font-family: josefin-slab, serif;
     margin-bottom: 5px;
-    color: var(--color-main-blue);
+    color: var(--color-main-dark);
     margin-right: 5px;
     }
 }
@@ -1481,20 +1485,16 @@ body {
         width: 97%;
     }
     .container.recommeneded{
-        max-width: 200px;
-        background-color: rgba(255, 255, 255, 1);
-        padding: 5px 10px;
         border-radius: 10px;
-        position: absolute;
-        left: 5px;
-        bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
     }
     #recommeneded-h2 {
     margin-top: 5px;
-    font-size: 1em;
+    font-size: 0.8em;
     font-family: josefin-slab, serif;
     margin-bottom: 5px;
-    color: var(--color-main-blue);
+    color: var(--color-main-dark);
     margin-right: 5px;
     }
 }
