--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -129,9 +129,9 @@ main {
 	width: 100vw;
 	flex-direction: row;
 	min-height: 70%;
-    min-height: -webkit-calc(100vh - 330px);
-    min-height: -moz-calc(100vh - 330px);
-    min-height: calc(100vh - 330px);
+    min-height: -webkit-calc(100vh - 300px);
+    min-height: -moz-calc(100vh - 300px);
+    min-height: calc(100vh - 300px);
 
 /*	
 	min-height: 70%;
@@ -530,8 +530,11 @@ ul, ol, li {
 	position: relative;
 }
 #checkout-form .form-control,
-#checkout-form .form-button{
+#checkout-form {
 	padding: 0.3em 0;
+}
+.form-button{
+	padding: 0.6em 0;	
 }
 #checkout-form h3 {
 	margin-bottom: 1.5em;
