--- a/christiansen.nikoline/lib/css/styleguide.css
+++ b/christiansen.nikoline/lib/css/styleguide.css
@@ -35,6 +35,8 @@ body {
 	font-family:var(--font-sans);
 }
 
+textarea { font-family: inherit; }
+
 h1,
 h2,
 h3,
@@ -79,7 +81,7 @@ p {
 															/* LAYOUT CLASSES */
 
 .container {
-	max-width: 900px;
+	max-width: 1050px;
 	margin-right: auto;
 	margin-left: auto;
 }
@@ -205,10 +207,10 @@ p {
 
 
 .navbar { 
-	background:var(--color-neutral-medium);
+	background: #919c8c94;
 	color:var(--color-white);
 	line-height:var(--header-height);
-	/*position: fixed;*/
+	border-bottom: 1px solid #919c8c;
 	z-index: 100;
 	width: 100%;
 }
@@ -453,10 +455,9 @@ article {
 	   }
 
 .hotdog {
-	background-color: var(--color-neutral-light);
-	border-radius: 2em;
-	padding: 0.5em 1.5em;
-	display: flex;
+    padding: 0.5em 1.5em;
+    display: flex;
+    border-bottom: 1px solid var(--color-main-dark);
 }
 
 .hotdog.dark {
@@ -465,7 +466,6 @@ article {
 }
 
 .hotdog.light {
-	background-color: var(--color-white);
 	color: var(--color-black);
 }
 
@@ -534,12 +534,13 @@ article {
 
 
 .figure.product {
-	border-radius: 0.5em;
-	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+	box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 	overflow: hidden; 
 	height: auto;
 	background-color: white;
 	margin: 0;
+	text-align: center;
+	border: 1px solid var(--color-neutral-dark);
 }
 
 .productlist a {
@@ -626,3 +627,26 @@ article {
 	object-fit: contain;
 }
 
+
+															/* ADMIN EDIT */
+
+.container-edit-list {
+	flex-wrap: wrap;
+    justify-content: center;
+ }
+
+
+.individual-product-edit {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.edit-product-gap {
+	gap: 10px;
+}
+
+.edit-name {
+	padding: 5px;
+}
