--- a/christiansen.nikoline/css/storetheme.css
+++ b/christiansen.nikoline/css/storetheme.css
@@ -19,24 +19,87 @@ body {
 	transform: scale(1.5,1.5);
 }
 
+
+
 @media (max-width: 800px) {
 	.container {
 		padding-left: 1em;
 		padding-right: 1em;
 	}
-	.navbar h1 {
-		padding-left: 0.5em;
-	}
 
-@media (max-width: 400px) {
+	.navbar h1 { padding-left: 0.5em; }
+
+
 	.navbar .display-flex {
-		display: block;
+		flex-wrap: wrap;
+		text-align: center;
+	}
+	.navbar .nav {
+		width: 100%;
+		display: none;
+	}
+	.navbar .nav-flex-ul { display: block; }
+
+	.navbar .nav li { line-height: 2em; }
+
+	.menu-button label {
+    	display: block;
+    	padding: 0 1em;
+    	font-size: 2em;
+    	color: var(--color-neutral-dark);
 	}
 
-	.navbar .nav li {
-		line-height: 2em;
+	#menu:checked+.navbar .nav {
+		display: block;
+		padding-bottom: 1em;
+	}
+
+	.welcome-img {
+	 width: 131%; 
+	}
+
+	.welcome-txt {
+		margin-left: 0em;
 	}
 }
+
+.menu-button label { display: none; }
+@media (max-width: 400px) {
+	.navbar .display-flex {
+		flex-wrap: wrap;
+		text-align: center;
+	}
+	.navbar .nav {
+		width: 100%;
+		display: none;
+	}
+	.navbar .nav-flex-ul { display: block; }
+
+	.navbar .nav li { line-height: 2em; }
+
+	.menu-button label {
+    	display: block;
+    	padding: 0 1em;
+    	font-size: 2em;
+    	color: var(--color-neutral-dark);
+	}
+
+	#menu:checked+.navbar .nav {
+		display: block;
+		padding-bottom: 1em;
+	}
+
+	.welcome-img {
+	 width: 131%; 
+	}
+
+	.welcome-txt {
+		margin-left: 0em;
+	}
+
+	
+}
+
 
 @media (max-width: 600px) {
 	.product-overlay figcamption {
