--- a/christiansen.nikoline/lib/css/styleguide.css
+++ b/christiansen.nikoline/lib/css/styleguide.css
@@ -1,7 +1,7 @@
 
 															/* CSS RESET */
 
-*, *::after, *::befroe {
+*, *::after, *::before {
 	box-sizing: border-box;
 }
 
@@ -34,6 +34,7 @@ body {
 	font-size: 100%;
 	font-family:var(--font-sans);
 }
+
 
 textarea { font-family: inherit; }
 
@@ -76,6 +77,13 @@ p {
  }
 
 
+ .grid .card {
+ 	height: 100%;
+ 	margin: 0;
+ 	padding: 15px !important;
+ }
+
+
 
 
 															/* LAYOUT CLASSES */
@@ -100,6 +108,7 @@ p {
 .flex-justify { justify-content: center; }
 
 .flex-columbn { flex-direction: column; }
+.flex-wrap { flex-wrap: wrap; }
 
 
 															/* SMALL CLASS */
@@ -232,10 +241,7 @@ p {
     margin-top: 15px;
 }
 
-
-.sort-button {
-
-}
+.flush>.navbar { margin-bottom: 1em; }
 
 
 
@@ -277,6 +283,7 @@ p {
 
 .card.flat {
 	padding: 0;
+	background-color: var(--color-neutral-light);
 }
 
 .card-section {
@@ -295,7 +302,7 @@ border-top: 1px solid red;
 															/* GOOD NAMING - NO "SQUARE", "CIRCLE" etc. */
 
 .view-window {
-	height: 100vh;
+	height: 80vh;
 	position: relative;
 	overflow: hidden;
 	background-size: cover;
@@ -303,9 +310,29 @@ border-top: 1px solid red;
 	background-attachment: fixed;
 }
 
+.view-window2 { margin-top: 2em; }
+
+
+
+
+
+.buttonlp {
+	margin-top: 3em;
+	text-align: center;
+	height: 5em;
+}
+
+.buttonlp a {
+	color: white;
+	align-items: center;
+	align-content: center;
+
+}
+
 
 
 															/* ARTICLE */
+
 
 article {
 	margin: 10px;
@@ -385,6 +412,9 @@ article {
 .hotdog,
 .form-input,
 .form-button,
+.form-button1,
+.form-button2,
+.form-button3,
 .form-item,
 .filter-button {
     display: inline-block;
@@ -420,7 +450,7 @@ article {
 															/* BUTTONS */
 
 .form-button {
-    background-color: var(--color-neutral-light);
+    background-color: #ffffff91;
  	border-radius: 0.2em;
  	cursor: pointer;
  	text-align: center;
@@ -432,6 +462,67 @@ article {
    }
 
    .form-button:hover {
+   	text-decoration: none;
+   	background-color: var(--color-main-dark);
+   	color: var(--color-white);
+   }
+
+   .form-button1 {
+    background-color: var(--color-neutral-light);
+    cursor: pointer;
+    text-align: center;
+    padding: 3em 1em;
+    margin-top: 2em;
+    font-weight: bold;
+    }
+
+    .form-button1:active {
+   	background-color: var(--color-neutral-medium);
+   }
+
+   .form-button1:hover {
+   	text-decoration: none;
+   	background-color: var(--color-main-dark);
+   	color: var(--color-white);
+   }
+
+
+   .form-button2 {
+    background-color: inherit;
+    cursor: pointer;
+    text-align: center;
+    padding: 0.8em 0.8em;
+    margin-top: 0.9em;
+    font-weight: bold;
+    border: 1px solid var(--color-neutral-dark);
+    width: auto;
+    font-size: 0.6em !important;
+    }
+
+    .form-button2:active {
+   	background-color: var(--color-neutral-medium);
+   }
+
+   .form-button2:hover {
+   	text-decoration: none;
+   	background-color: var(--color-main-dark);
+   	color: var(--color-white);
+   }
+
+   .form-button3 {
+     background-color: #cbcdc5;
+    cursor: pointer;
+    text-align: center;
+    padding: 0.8em 0.8em;
+    margin-top: 0.9em;
+    border-radius: 0.2em;
+    }
+
+    .form-button3:active {
+   	background-color: var(--color-neutral-medium);
+   }
+
+   .form-button3:hover {
    	text-decoration: none;
    	background-color: var(--color-main-dark);
    	color: var(--color-white);
@@ -478,6 +569,7 @@ article {
 .form-select>select {
 	padding: 0.7em 1.5em;
 	background-color: var(--color-neutral-light);
+	border: 1px solid #ffffff91;
 	border-radius: 0.3em;
 	display: block;
 	cursor: pointer;;
@@ -628,6 +720,11 @@ article {
 }
 
 
+.rec-products {
+	margin-top: 2em;
+}
+
+
 															/* ADMIN EDIT */
 
 .container-edit-list {
@@ -649,4 +746,77 @@ article {
 
 .edit-name {
 	padding: 5px;
+}
+
+
+
+
+															/* RANDOM */
+
+.column-3 {
+	margin-top: 4em;
+}
+
+.welcome-img {
+	 width: 186%; 
+	 margin-left: -2.5em;
+}
+
+.welcome-txt {
+	margin-left: 6em;
+}
+
+
+															/* FOOTER */
+footer {
+	width: 100%;
+    height: 1em;
+    color: black;
+    border-top: 2px solid black;
+    margin-top: 2em;
+    bottom: 0;
+    padding-left: 2em;
+    background-color: white;
+    text-align: center;
+}
+
+.blank-space {
+	background-color: inherit;
+    bottom: 0;
+    height: 7em;
+}
+
+
+
+
+
+
+
+															/* STYLEGUIDE DROP DOWN */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown a:hover {
+	color: var(--color-neutral-dark);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.styleguidenav { 
+	padding-bottom: 9em;
+
 }
