--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -55,8 +55,13 @@ body {
 	background-color: var(--color-offwhite);
 	font-family: var(--font-body-text) ;
 	color: var(--color-primary-dark);
+	overflow-x: hidden;
 }
-
+body.fix{
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+}
 h1,h2,h3,h4,h5,h6{
 	font-family: var(--font-heading);
 	color: var(--color-primary-dark);
@@ -88,6 +93,7 @@ fieldset {
 	height: 80px;
 	background-color: var(--color);
 	border-bottom: 2px solid var(--color-primary-dark);
+	margin-bottom: 2em;
 }
 
 #navigation > nav,
@@ -96,19 +102,64 @@ fieldset {
 	width: 100%;
 	height: 100%;
 }
+#navListBurger {
+	width: 100vw;
+	height: 100vh;
+	background-color: var(--color-primary-dark);
+	color: var(--color-white);
 
+	position: absolute;
+	left: 100vw;
+	top: 0;
+	z-index: 2000;
+	transition: all 0.3s ease-in-out;
+
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	display: none;
+
+}
+#navListBurger.slide {
+
+	transform: translateX(-100vw);
+}
+
+
+#navListBurger > ul {
+	width: 50%;
+	height: 40%;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 2em;
+}
+#storeIcons {
+	width: 100%;
+	flex-direction: row;
+	justify-content: space-between;
+}
 #burger, 
 #logo, 
 #twitter,
 #instagram,
-#facebook
+#facebook,
+#burger, 
+#close,
+#burgerLogo
  {
 	width: 50px;
 	height: 50px;
 }
+#logo, #close {
+	z-index: 2100;
+}
 
-#burger {
+
+
+#burger, #close {
 	margin-right: 10px;
+	display: none;
 }
 
 #burger a {
@@ -149,7 +200,7 @@ main {
 
 #hero {
 	width: 65vw;
-	height: 50vh;
+	height: auto;
 	overflow: hidden;
 	position: relative;
 }
@@ -157,7 +208,12 @@ main {
 	width: 100%;
 }
 
+
 @media screen and (max-width: 550px){
+	body{
+		width: 100vw;
+		overflow-x: hidden;
+	}
 	#hero {
 		width: 100vw;
 		height: 50vh;
@@ -165,10 +221,18 @@ main {
 		position: relative;
 	}
 	#hero img {
-		width: 300%;
-		position: absolute;
-		left: -58%;
+		width :100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: 25% 0;
 	}
+	#burger{
+		display: block;
+	}
+	#navList{
+		display: none;
+	}
+
 }
 
 /* FEATURE PRODUCTS */
@@ -289,11 +353,20 @@ ul, ol, li {
 	justify-content: flex-end;
 	align-items: center;
 }
+#footer > ul:nth-child(2) > ul {
 
+	flex-direction: row;
+	justify-content: end;
+	align-items: center;
+	gap:  1em;
+}
 #footerLogo {
 	width: 150px;
 	height: 50px;
 }
+
+
+
 #footer .form-label-animated {
     font-size: 1.2em;
     color: var(--color-primary-dark);
@@ -309,7 +382,11 @@ ul, ol, li {
     top: -4.5em;
 }
 
+}
 @media screen and (max-width: 550px){
+		#footer{
+			padding-bottom: 1em;
+		}
 	/*TOP SECTION OF FOOTER*/
 	#footer > ul {
 		width: 100%;
@@ -331,12 +408,23 @@ ul, ol, li {
 		width: 90%;
 		justify-content: center;
 	}
-	#footer > ul > li > form > ul{
-	justify-content: center ;
-	align-items: baseline;
-	margin: 0;
-	height: auto;
-}
+	#footer > ul > li > form > ul  {
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		gap: 0;
+		margin: 0;
+		height: auto;
+	}
+	#footer > ul > li > form > ul > li:first-child {
+	width: 75%;
+	}
+	#footer > ul > li > form > ul > li:nth-child(2) {
+		width: 40%;
+	}
+
+
 	/*BOTTOM SECTION OF FOOTER*/
 		#footer > ul:nth-child(2) {
 		flex-direction: column;
@@ -348,11 +436,24 @@ ul, ol, li {
 		justify-content: center;
 		align-items: center;
 	}
-
+	#footer > ul:nth-child(2) > ul {
+		width: 100%;
+	}
 	#footer > ul:nth-child(2) >li:nth-child(1){
 		justify-content: center;
 		align-items: center;
 		margin-top: 1em;
+	}
+	#footer > ul:nth-child(2) > ul {
+
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	}
+	#footer > ul:nth-child(2) >li:nth-child(2){
+	justify-content: center;
+	align-items: center;
 	}
 	
 }
@@ -534,7 +635,7 @@ ul, ol, li {
 	padding: 0.3em 0;
 }
 .form-button{
-	padding: 0.6em 0;	
+	padding: 0.6em 1em;	
 }
 #checkout-form h3 {
 	margin-bottom: 1.5em;
@@ -565,8 +666,13 @@ input[type="text"]
 	width: 100%;
 }
 .images-thumbs img {
-	width: 8em;
-	height: 8em;
+	width: 9em;
+	height: 9em;
+	object-fit: contain;
+}
+.images-thumbs-mini img {
+	width: 5em;
+	height: 5em;
 	object-fit: contain;
 }
 .images-thumbs img:not(img:last-child){
@@ -749,4 +855,54 @@ textarea{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.product-item{
+	margin-bottom: 1em;
+}
+
+.product-item-form, .product-item-images, .cart-info{
+	width: 100%;
+	height: 100%;
+	background-color: var(--color-white);
+	padding: 1em;
+}
+.product-item-images{
+	justify-content: center;
+	gap: 1em;
+}
+.product-item-images  > div {
+	width: 100%;
+	height: auto;
+}
+.cart-info{
+	padding: 2em;
+}
+.cart-recommentation {
+	margin-top: 4em;
+}
+
+.form-indicator{
+	color: var(--color-secondary-dark);
+}
+.form-legal{
+	padding: 0;
+	margin-top: 0;
+
+}
+.form-legend{
+	margin-bottom: 0;
+}
+
+.images-thumbs-mini > ul, .images-thumbs-mini > div, .images-thumbs-mini li {
+	margin: 0;
+	padding: 0;
+}
+#summaryTotal > div:first-child {
+	   border-radius: 0;
+       box-shadow:  none ;
+}
+.checkOutSummary, .checkOutForm{
+	background-color: var(--color-white);
+	padding: 1em;	
 }
