--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -102,6 +102,15 @@ fieldset {
 	width: 100%;
 	height: 100%;
 }
+#navList{
+	width: 30%;
+}
+
+#navList > ul{
+width: 100%;
+justify-content: space-between;
+}
+
 #navListBurger {
 	width: 100vw;
 	height: 100vh;
@@ -617,14 +626,14 @@ ul, ol, li {
     color: var(--color-primary-dark);
     display: block;
     width: 100%;
-    position: absolute;
-    top: -0.1em;
+    position: relative;
+    top: -2em;
     transition: all 0.3s ease-in-out;
     cursor: text;
 }
 .form-label-motion {
     font-size: 0.8em;
-    top: -1.5em;
+    top: -4em;
 }
 #product-search .form-control,
 #checkout-form .form-control{
@@ -905,4 +914,8 @@ textarea{
 .checkOutSummary, .checkOutForm{
 	background-color: var(--color-white);
 	padding: 1em;	
+}
+
+#adminProductSubmit{
+	text-transform: uppercase;
 }
