--- a/fu.zhen/lib/css/styleguide.css
+++ b/fu.zhen/lib/css/styleguide.css
@@ -53,7 +53,6 @@ a:hover {
 
 
 
-
 /* LAYOUT CLASSES */
 
 .container {
@@ -76,7 +75,7 @@ a:hover {
 .flex-justify-center {justify-content: center;}
 
 .flex-column { flex-direction:column; }
-
+.flex-wrap { flex-wrap:wrap; }
 .category-button {margin-right: 10px}
 
 
@@ -89,7 +88,12 @@ a:hover {
 }
 .hidden { display:none; }
 
-
+.about_img {
+	width: 600px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
@@ -183,6 +187,7 @@ a:hover {
 	background-color: var(--color-neutral-dark);
 	color:  var(--color-white);
 	line-height: var(--header-height);
+	margin-bottom: 1em;
 }
 	.navbar h1 {
 		font-size: 1em;
@@ -191,6 +196,9 @@ a:hover {
 	}
 	.navbar a{
 		padding: 0 0.5em;
+	}
+	.flush>.navbar {
+		margin-bottom: 0;
 	}
 
 
@@ -225,6 +233,11 @@ a:hover {
 
 	.card.flat {
 		padding: 0;
+	}
+
+	[class*='col-']>.card {
+		height:100%;
+		margin:0;
 	}
 
 	.card-section~.card-section {
