--- a/chiang.eileen/lib/css/styleguide.css
+++ b/chiang.eileen/lib/css/styleguide.css
@@ -80,6 +80,7 @@ a:hover {
 .flex-justify-center {justify-content: center;}
 
 .flex-column { flex-direction:column; }
+.flex-wrap { flex-wrap: wrap; }
 
 
 
@@ -187,7 +188,9 @@ a:hover {
 	background-color: var(--color-neutral-dark);
 	color:  var(--color-white);
 	line-height: var(--header-height);
+	margin-bottom: 1em;
 }
+
 	.navbar h1 {
 		font-size: 2em;
 		margin: 0;
@@ -196,7 +199,9 @@ a:hover {
 	.navbar a{
 		padding: 0 0.5em;
 	}
-
+	.flush>.navbar {
+		margin-bottom: 0;
+	}
 
 
 /* CARD */
@@ -229,6 +234,11 @@ a:hover {
 
 	.card.flat {
 		padding: 0;
+	}
+
+	[class*='col-']>.card {
+		height:100%;
+		margin:0;
 	}
 
 	.card-section~.card-section {
