--- a/zheng.yushi/lib/css/styleguide.css
+++ b/zheng.yushi/lib/css/styleguide.css
@@ -76,6 +76,7 @@ a:hover {
 .flex-justify-center {justify-content: center;}
 
 .flec-column {flex-direction: column;}
+.flec-wrap {flex-wrap: wrap;}
 
 
 /*Small Classes*/
@@ -179,6 +180,7 @@ a:hover {
 	background-color: var(--color-neutral-dark) ;
 	color: var(--color-white);
 	line-height: var(--header-height);
+	margin-bottom: 1em;
 }
 
 	.navbar h1 {
@@ -190,6 +192,9 @@ a:hover {
 		padding: 0 0.5em;
 	}
 
+.flush>.navbar {
+	margin-bottom: 0;
+}
 
 /*  CARD */
 
@@ -225,6 +230,10 @@ a:hover {
 		padding: 0;
 	}
 
+	[class*='col-']>.card {
+	height: 100%;	
+	margin: 0;
+	}
 
 	.card-section~.card-section {
 		border-top: 1px solid var(--color-neutral-light);
